[package]
name = "tricore-gdb-das"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bitfield-struct = "0.7.0"
byteorder = "1.5.0"
colored = "2.1.0"
elf = "0.7.4"
log = "0.4.21"
pretty_env_logger = "0.5.0"
tempfile = "3.10.1"

rust-mcd = {git = "https://github.com/AkhilTThomas/tricore-probe.git", branch="feat/stop-cmd"}
gdbstub = {git = "https://github.com/AkhilTThomas/gdbstub.git", branch="feat/tricore"}
gdbstub_arch = {git = "https://github.com/AkhilTThomas/gdbstub.git", branch="feat/tricore"}

clap = { version = "4.5.7", features = ["derive", "cargo"] }
